rework front, add search
